[project]
name = "jupyter-book-epub"
version = "0.1.0"
description = "Makes it possible for epubs rendered by Jupyter Book (https://jupyterbook.org/) to build epubs with working tables of content."
authors = [
    { name = "Daniel Roy Greenfeld", email = "daniel@feldroy.com" }
]
dependencies = [
    "jupyter-book>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jupyter_book_epub"]
